# folder-cleaner

./: .gitignore  MIGRATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  USAGE_GUIDE.md  filetypes.json  install.sh  new.py  pyproject.toml  test.sh
data/: filetypes.json
src/folder_organizer/: __init__.py  __main__.py  app.py  app.tcss  cli.py  config.py  organizer.py
src/folder_organizer/screens/: __init__.py  delete.py  folder_select.py  home.py  move.py  organize.py  search.py
src/folder_organizer/widgets/: __init__.py
