[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "folder-organizer"
version = "2.0.0"
description = "A beautiful terminal-based folder organizer with intelligent file management"
readme = "README.md"
authors = [
    {name = "Harshit", email = "harshit3478@users.noreply.github.com"}
]
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["folder", "organizer", "file-management", "tui", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "textual>=0.47.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "textual-dev>=1.0.0",
]

[project.scripts]
folder-organizer = "folder_organizer.cli:main"

[project.urls]
Homepage = "https://github.com/harshit3478/folder-cleaner"
Repository = "https://github.com/harshit3478/folder-cleaner"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
folder_organizer = ["../data/*.json"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
